Fix expanded album track list spacing.

--- a/source/stylesheets/app.css.sass
+++ b/source/stylesheets/app.css.sass
@@ -307,9 +307,9 @@ ul.albums
       width: 100%
       height: 100%
     > .cover
-      -webkit-transform: rotateX(180deg) translateZ(0.1px)
+      -webkit-transform: rotateX(180deg) translateZ(0.01px)
     > .back
-      -webkit-transform: translateZ(0.1px)
+      -webkit-transform: translateZ(0.01px)
       width: 500px
       height: 500px
       z-index: 10
@@ -335,7 +335,7 @@ ul.albums
       > .back
         box-shadow: none
         -webkit-transition-delay: $flip-time / 2
-        left: 100%
+        left: 99.99%
         @media (max-width: 1000px)
           left: 0
           top: 100%
